--- a/environment.yml
+++ b/environment.yml
@@ -101,6 +101,7 @@ dependencies:
     - pytest==6.2.1
     - rich==9.8.2
     - scipy==1.5.4
+    - seaborn==0.11.1
     - toml==0.10.2
     - torch==1.2.0
     - torchvision==0.4.0
