--- a/environment.yml
+++ b/environment.yml
@@ -7,8 +7,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - brotlipy=0.7.0=py36h27cfd23_1003
-  - ca-certificates=2021.5.25=h06a4308_1
-  - certifi=2021.5.30=py36h06a4308_0
+  - ca-certificates=2020.10.14=0
+  - certifi=2020.6.20=py36_0
   - cffi=1.14.4=py36h261ae71_0
   - chardet=4.0.0=py36h06a4308_1003
   - click=7.1.2=py_0
@@ -51,7 +51,8 @@ dependencies:
   - nltk=3.5=py_0
   - olefile=0.46=pyh9f0ad1d_1
   - openssl=1.1.1k=h27cfd23_0
-  - pandas=1.1.5=py36ha9443f7_0
+  - pandas=1.1.3=py36he6710b0_0
+  - patsy=0.5.1=py36_0
   - pip=20.3.3=py36h06a4308_0
   - pycparser=2.20=py_2
   - pyopenssl=20.0.1=pyhd3eb1b0_1
@@ -68,9 +69,11 @@ dependencies:
   - requests=2.25.1=pyhd3eb1b0_0
   - scikit-image=0.17.2=py36hdf5156a_0
   - scikit-learn=0.23.2=py36hb6e6923_3
+  - seaborn=0.11.0=py_0
   - setuptools=51.3.3=py36h06a4308_4
   - six=1.15.0=pyh9f0ad1d_0
   - sqlite=3.33.0=h62c20be_0
+  - statsmodels=0.12.0=py36h7b6447c_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tifffile=2020.10.1=py36hdd07704_2
   - tk=8.6.10=hbc83047_0
@@ -84,26 +87,25 @@ dependencies:
   - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
-    - attrs==20.3.0
-    - colorama==0.4.4
-    - commonmark==0.9.1
-    - dataclasses==0.8
-    - editdistance==0.5.3
-    - future==0.18.2
-    - importlib-metadata==3.4.0
-    - iniconfig==1.1.1
-    - numpy==1.19.5
-    - packaging==20.8
-    - pillow==8.1.0
-    - pluggy==0.13.1
-    - py==1.10.0
-    - pygments==2.7.4
-    - pytest==6.2.1
-    - rich==9.8.2
-    - scipy==1.5.4
-    - seaborn==0.11.1
-    - toml==0.10.2
-    - torch==1.2.0
-    - torchvision==0.4.0
-    - typing-extensions==3.7.4.3
-    - zipp==3.4.0
+      - attrs==20.3.0
+      - colorama==0.4.4
+      - commonmark==0.9.1
+      - dataclasses==0.8
+      - editdistance==0.5.3
+      - future==0.18.2
+      - importlib-metadata==3.4.0
+      - iniconfig==1.1.1
+      - numpy==1.19.5
+      - packaging==20.8
+      - pillow==8.1.0
+      - pluggy==0.13.1
+      - py==1.10.0
+      - pygments==2.7.4
+      - pytest==6.2.1
+      - rich==9.8.2
+      - scipy==1.5.4
+      - toml==0.10.2
+      - torch==1.2.0
+      - torchvision==0.4.0
+      - typing-extensions==3.7.4.3
+      - zipp==3.4.0
